--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -12,7 +12,6 @@ version: '3'
 vars:
   TARGET: '{{.USER_WORKING_DIR}}/bin'
   RELEASE_DIR: "./bin/release/{{.TARGET_FRAMEWORK}}/publish"
-  SOURCE_OUT: "{{.USER_WORKING_DIR}}/bin/source"
 
 tasks:
   
@@ -37,8 +36,7 @@ tasks:
 
   postbuild_failed:
     dir: '{{.USER_WORKING_DIR}}'
-    cmds:
-     - echo "postbuild failed {{.PROJECT_NAME}}"
+    cmds: []
 
 
   postbuild:
@@ -68,5 +66,5 @@ tasks:
     dir: '{{.USER_WORKING_DIR}}'
     ignore_error: true
     cmds:
-     - cmd: powershell Remove-Item -Recurse './bin'
-     - cmd: powershell Remove-Item -Recurse './obj'
+     - for: ['bin/', 'obj/']
+       cmd: powershell Remove-Item -Recurse '{{.ITEM}}'
