--- a/lib/vnlib.browser/package.json
+++ b/lib/vnlib.browser/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.13",
   "author": "Vaughn Nugent",
   "description": "Client JavaScript helper library for vuejs3 web-apps for connecting with Essentials.Accounts plugin and vuejs helpers.",
-  "repository":"https://github.com/VnUgE/Plugins.Essentials/tree/master/lib/vnlib.browser",
+  "repository": "https://github.com/VnUgE/Plugins.Essentials/tree/master/lib/vnlib.browser",
   "copyright":"Copyright \u00A9 2024 Vaughn Nugent",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "typings": "./dist/index.d.ts",
-  "output":"bin",
+  "output": "bin",
   "scripts": {
     "lint": "eslint --ext .js,.ts src",
     "build": "tsc",
@@ -20,17 +20,19 @@
     "@babel/types": "^7.x",
     "@types/lodash-es": "^4.14.x",
     "@types/node": "^20.5.1",
-    "@typescript-eslint/eslint-plugin": "^7.x.x"
+    "@typescript-eslint/eslint-plugin": "^7.x.x",
+    "@simplewebauthn/types": "^10.0.0"
   },
 
   "peerDependencies": {
+    "@simplewebauthn/browser": "^10.0.0",
     "@vueuse/core": "^10.x",
-    "lodash-es": "^4.x",
-    "vue": "^3.x",
     "axios": "^1.x",
     "eslint": "^8.39.0",
     "jose": "^5.x",
-    "universal-cookie": "^7.0.x"
+    "lodash-es": "^4.x",
+    "universal-cookie": "^7.0.x",
+    "vue": "^3.x"
   },
 
   "eslintConfig": {
