--- a/lib/vnlib.browser/package.json
+++ b/lib/vnlib.browser/package.json
@@ -18,23 +18,21 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/types": "^7.x",
+    "@simplewebauthn/types": "^10.0.0",
     "@types/lodash-es": "^4.14.x",
     "@types/node": "^20.5.1",
     "@typescript-eslint/eslint-plugin": "^7.x.x",
-    "@simplewebauthn/types": "^10.0.0"
+    "eslint": "^9.7.0"
   },
-
   "peerDependencies": {
     "@simplewebauthn/browser": "^10.0.0",
     "@vueuse/core": "^10.x",
     "axios": "^1.x",
-    "eslint": "^8.39.0",
     "jose": "^5.x",
     "lodash-es": "^4.x",
     "universal-cookie": "^7.0.x",
     "vue": "^3.x"
   },
-
   "eslintConfig": {
     "root": true,
     "extends": [
