--- a/lib/vnlib.browser/Taskfile.yaml
+++ b/lib/vnlib.browser/Taskfile.yaml
@@ -13,10 +13,10 @@ tasks:
 #called by build pipeline to build module
   build:
     cmds:
-     - echo "building module {{.MODULE_NAME}}" 
+     - echo "building module {{ .PROJECT_NAME  }}" 
 
     #update internal package version
-     - cmd: npm version {{.BUILD_VERSION}}
+     - cmd: npm version {{ .BUILD_VERSION }}
        ignore_error: true
 
     #install dependencies and build
@@ -24,11 +24,19 @@ tasks:
      - npm run build
 
   postbuild_success:
+    vars:
+      TAR_FILES:
+        dist/
+        LICENSE.txt
+        README.md
+        package.json
+        package-lock.json
+        tsconfig.json
+
     cmds:
     - powershell -Command "mkdir bin -Force"
     #tgz the dist folder
-    - tar --exclude="./node_modules" --exclude="./src" --exclude="./.git" --exclude="./bin" --exclude=".gitignore" --exclude="*.yaml" --exclude="*.yml" -czf bin/release.tgz .
-
+    - tar -czf bin/release.tgz {{ .TAR_FILES }}
 
 #called by build pipeline to clean module
   clean:
@@ -36,4 +44,4 @@ tasks:
     cmds:
      #delete dist folder
     - for: ['bin/', 'dist/', 'node_modules/']
-      cmd: powershell -Command "Remove-Item -Recurse -Force {{.ITEM_NAME}}"
+      cmd: powershell -Command "Remove-Item -Recurse -Force {{ .ITEM_NAME }}"
