add basic unit testing and  formatting

--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,4 +1,4 @@
-version: 36
+version: 37
 jobs:
 - name: GitHub Push
   steps:
@@ -38,6 +38,15 @@ jobs:
     withLfs: false
     withSubmodules: false
     checkoutPath: '@project_name@'
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: dev-init core
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
+        cd core
+        task -t Module.Taskfile.yaml dev-init
+    useTTY: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !CommandStep
     name: run unit tests
