--- a/Module.Taskfile.yaml
+++ b/Module.Taskfile.yaml
@@ -76,7 +76,7 @@ tasks:
     vars:
       NATIVE_BUILD_PATH: 'build/{{ OS }}/{{ if eq OS "windows"}}Debug/{{end}}'
       LIB_PREFIX: '{{ if eq OS "windows"}}vnlib{{else}}libvn{{end}}'
-      HOST_CONFIG_FILE: '{{ .USER_WORKING_DIR }}/tests/plugin-tests/Test.Plugins.Essentials.Config.json'
+      CONFIG_DIR: '{{ .USER_WORKING_DIR }}/tests/plugin-tests/Config'
       ARGON2_LIB_PATH: '{{ .USER_WORKING_DIR }}/../core/lib/Utils.Cryptography/argon2/{{ .NATIVE_BUILD_PATH }}argon2'
     cmds:
      - cmd: dotnet test
@@ -85,7 +85,7 @@ tasks:
         --configuration debug
         --verbosity normal
         --framework {{ .FRAMEWORK | default "net8.0" }}
-        --environment TEST_HOST_CONFIG_FILE="{{ .HOST_CONFIG_FILE }}"
+        --environment TEST_CONFIG_DIR="{{ .CONFIG_DIR }}"
         --environment VNLIB_ARGON2_DLL_PATH="{{ .ARGON2_LIB_PATH }}"
 
 #called by build pipeline to clean module
