--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -91,6 +91,7 @@ jobs:
     interpreter: !DefaultInterpreter
       commands: |
         vnbuild build -S --include @project_name@ --verbose
+        vnbuild publish -i @project_name@
     useTTY: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
