--- a/tests/api-tests/Taskfile.yaml
+++ b/tests/api-tests/Taskfile.yaml
@@ -31,7 +31,7 @@ tasks:
     cmds:
     - cmd: powershell mkdir {{ .BINARY_DIR }} -Force
     #tgz the source files
-    - cmd: tar -czf {{ .BINARY_DIR }}/release.tgz {{ .TAR_FILES }}
+    - cmd: tar -czf {{ .BINARY_DIR }}/src.tgz {{ .TAR_FILES }}
 
 #Remove the output dirs on clean
   clean:
