add mock publish stage to development builds

--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -91,6 +91,13 @@ jobs:
     interpreter: !DefaultInterpreter
       commands: |
         vnbuild build -S --include @project_name@ --verbose
+    useTTY: true
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: mock publish
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
         vnbuild publish -i @project_name@
     useTTY: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
