--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -90,7 +90,19 @@ jobs:
     runInContainer: false
     interpreter: !DefaultInterpreter
       commands: |
+        dotnet-gitversion.exe core /updateprojectfiles
+        dotnet-gitversion.exe VNLib.Data.Caching /updateprojectfiles
+        dotnet-gitversion.exe Emails.Transactional /updateprojectfiles
+        dotnet-gitversion.exe VNLib.Plugins.Extensions /updateprojectfiles
+        dotnet-gitversion.exe VNLib.Plugins.Essentials.Oauth /updateprojectfiles
         vnbuild build -S --include @project_name@ --verbose
+    useTTY: true
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: mock publish
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
         vnbuild publish -i @project_name@
     useTTY: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
@@ -130,6 +142,11 @@ jobs:
     runInContainer: false
     interpreter: !DefaultInterpreter
       commands: |
+        dotnet-gitversion.exe core /updateprojectfiles
+        dotnet-gitversion.exe VNLib.Data.Caching /updateprojectfiles
+        dotnet-gitversion.exe Emails.Transactional /updateprojectfiles
+        dotnet-gitversion.exe VNLib.Plugins.Extensions /updateprojectfiles
+        dotnet-gitversion.exe VNLib.Plugins.Essentials.Oauth /updateprojectfiles
         vnbuild build -S --include @project_name@
     useTTY: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
