add backend unit testing for for added oauth2 plugin

--- a/tests/plugin-tests/Plugins.Essentials.Tests.csproj
+++ b/tests/plugin-tests/Plugins.Essentials.Tests.csproj
@@ -35,6 +35,7 @@
     <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Accounts\src\VNLib.Plugins.Essentials.Accounts.csproj" />
     <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Auth.Social\src\VNLib.Plugins.Essentials.Auth.Social.csproj" />
     <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Content.Routing\src\VNLib.Plugins.Essentials.Content.Routing.csproj" />
+    <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Oauth.ClientApps\src\VNLib.Plugins.Essentials.Oauth.ClientApps.csproj" />
   </ItemGroup>
 
 
