Squashed commit of the following:
commit de7adf8e9e531abba36c59376f2de1f40479d33b
Author: vnugent <public@vaughnnugent.com>
Date:   Sun Dec 29 15:48:06 2024 -0500

    update solution file to includ added packages

commit b03377a93d60b07cec91237fae35f9f84449e1f2
Author: vnugent <public@vaughnnugent.com>
Date:   Sun Dec 29 15:39:12 2024 -0500

    add unit tests for sessions libraries

commit 01548f1c11bc37861a810e6627f5c7e9330c3eb5
Author: vnugent <public@vaughnnugent.com>
Date:   Sun Dec 29 15:25:29 2024 -0500

    add session libraries

commit 143dcbb443bfe2255a816fc2ae953ecdfcba6052
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Dec 28 12:19:32 2024 -0500

    fix oauth backend bugs & add api unit testing

commit 49de23122ffbe17453e0e645cda85370fe89c0a3
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Dec 26 14:41:37 2024 -0500

    add backend unit testing for for added oauth2 plugin

commit aea1db4ecd98b65780a2b65faaafaf65755b51cb
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Dec 26 14:19:13 2024 -0500

    consolidate oauth2 client app plugin

commit f44cc632f6cf59d7e96d4d17c57d9e81aa496a53
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Dec 26 14:04:46 2024 -0500

    consolidate oauth helper library

commit 2baa568c997039451f9cfd3eaeb4c108edbadfab
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Dec 26 13:51:36 2024 -0500

    package updates, calm analyzers and fix some package naming

commit e339d8d7d2a1d54b98110c1425f978dd8fe3bb52
Merge: 990f89e ccf4bc9
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Dec 19 15:34:57 2024 -0500

    Merge branch 'master' into develop

--- a/tests/plugin-tests/Plugins.Essentials.Tests.csproj
+++ b/tests/plugin-tests/Plugins.Essentials.Tests.csproj
@@ -30,11 +30,15 @@
     <ProjectReference Include="..\..\..\VNLib.Data.Caching\plugins\VNLib.Data.Caching.Providers.VNCache\src\VNLib.Data.Caching.Providers.VNCache.csproj" />
     <ProjectReference Include="..\..\..\VNLib.Plugins.Extensions\lib\sql-providers\sqlite\VNLib.Plugins.Extensions.Loading.Sql.SQLite\src\VNLib.Plugins.Extensions.Loading.Sql.SQLite.csproj" />
     <ProjectReference Include="..\..\lib\VNLib.Plugins.Essentials.Users\src\VNLib.Plugins.Essentials.Users.csproj" />
+    <ProjectReference Include="..\..\lib\VNLib.Plugins.Sessions.OAuth\src\VNLib.Plugins.Sessions.OAuth.csproj" />
+    <ProjectReference Include="..\..\lib\VNLib.Plugins.Sessions.VNCache\src\VNLib.Plugins.Sessions.VNCache.csproj" />
     <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Accounts.AppData\src\VNLib.Plugins.Essentials.Accounts.AppData.csproj" />
     <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Accounts.Registration\src\VNLib.Plugins.Essentials.Accounts.Registration.csproj" />
     <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Accounts\src\VNLib.Plugins.Essentials.Accounts.csproj" />
     <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Auth.Social\src\VNLib.Plugins.Essentials.Auth.Social.csproj" />
     <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Content.Routing\src\VNLib.Plugins.Essentials.Content.Routing.csproj" />
+    <ProjectReference Include="..\..\plugins\VNLib.Plugins.Essentials.Oauth.ClientApps\src\VNLib.Plugins.Essentials.Oauth.ClientApps.csproj" />
+    <ProjectReference Include="..\..\plugins\VNLib.Plugins.Sessions.SessionProvider\src\SessionProvider.csproj" />
   </ItemGroup>
 
 
