--- a/Module.Taskfile.yaml
+++ b/Module.Taskfile.yaml
@@ -84,7 +84,7 @@ tasks:
         --logger "console;verbosity=detailed"
         --configuration debug
         --verbosity normal
-        --framework {{ .FRAMEWORK | default "net8.0" }}
+        --framework {{ .TARGET_FRAMEWORK | default "net8.0" }}
         --environment TEST_CONFIG_DIR="{{ .CONFIG_DIR }}"
         --environment VNLIB_ARGON2_DLL_PATH="{{ .ARGON2_LIB_PATH }}"
 
