Squashed commit of the following:
commit 8ad09ab569b2ca56808dd300cadbe04799448ee5
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 7 21:53:30 2025 -0500

    build vnlib.browser before running api tests

commit 3f8a133496751f2378b04c062d9722b72833942e
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 7 21:53:04 2025 -0500

    run tests without color to avoid messing up the ci log driver

commit f6ab0faddb4a053791c7af9d9d65c577bb913aa7
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 7 21:43:27 2025 -0500

    revert buildspec version

commit db71b6ebdf3a207a601c8c2480991014161b6100
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 7 21:41:55 2025 -0500

    ci: Update buildspec for fetching branches manually

commit 3a59f312102036d4d197c07110945bdf534ce1a5
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 7 21:37:22 2025 -0500

    implement the experimental CI vitest api tests

commit a3bc5ed46507595c6561cbbc562455719ae8e24a
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 7 21:36:48 2025 -0500

    fix vitest browser warnings

commit 5f2b4c55a99350f7d023366e4304aded3a2793ac
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 7 21:33:17 2025 -0500

    create experimental ci api test and update test files

commit fdb3fe90cb0e21aa98b2d01e9ae7c26483b25b0f
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 7 21:31:56 2025 -0500

    chore: #8 Update vitest and vnlib packages

commit 2769b3c8a67120b0fc9eae5ae975655893d636df
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Feb 4 14:56:15 2025 -0500

    cleanup some silly things i saw

commit 00b6c6a89e493b409c5079afbd83b283f8b1cac7
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Jan 30 22:00:33 2025 -0500

    Allow a minimal fido api return

commit d5436725af312ab0db71788ecbefac6923a12bde
Merge: 2fdaadd 785bb68
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jan 28 20:36:10 2025 -0500

    Merge branch 'master' into develop

--- a/tests/api-tests/Taskfile.yaml
+++ b/tests/api-tests/Taskfile.yaml
@@ -16,7 +16,11 @@ tasks:
 
   test:
     cmds:
-      - cmd: echo "TODO"
+      - cmd: cd '{{ .MODULE_DIR }}/lib/vnlib.browser' && npm install
+      - cmd: cd '{{ .MODULE_DIR }}/lib/vnlib.browser' && npm run build
+      - cmd: npm install
+      - cmd: "npm run test:ci"
+        ignore_error: true    #TEMPORARY until a headless test server can be staged
 
   postbuild_success:
     vars:
