Squashed commit of the following:
commit 0f1caa93ed144edb0a51ef0e8d7fd2fb35572b29
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 21 21:36:58 2025 -0500

    update packages and fix api tests

commit 51530b02ddd03b99ce94f91732f08324adcc5af5
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 21 16:00:29 2025 -0500

    remove no-restore msbuild flag for testing build, yeah it needs to be there.

commit 41d79849bf9747ce70c1be68870282192bc87f2d
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 21 15:36:54 2025 -0500

    add isEnabled methods to built-in rpc types

commit c249b71c8eb1d89a5b06254f88bae5ad90a08f43
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 21 15:24:48 2025 -0500

    add project level build default ( >task ) from a project level and fix test project

commit a57d84c55dd3b17d61bfccc820e9fc66d4ea8110
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 21 15:23:21 2025 -0500

    split build and test commands and update for new shared config directory

commit 1b4edcac6778e9ab329e739bac74104f5f38dd03
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 21 15:22:26 2025 -0500

    move config files for future api tests, rename session provider project file

commit a5fa032810c4f5e4afde43cea157e28fa1547561
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Feb 15 16:53:40 2025 -0500

    refactor!: Disable users auto "migrate" & add json config type

commit e733b353e21a1137a8da492a310b610ebd52fad3
Merge: 8ad09ab ec45742
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Feb 7 22:24:21 2025 -0500

    Merge branch 'master' into develop

--- a/Module.Taskfile.yaml
+++ b/Module.Taskfile.yaml
@@ -10,7 +10,7 @@
 
 version: '3'
 
-vars:  
+vars:
   ARCHIVE_FILE_NAME: '{{ .ARCHIVE_FILE_NAME | default "archive.tgz" }}'
   MS_ARGS: 
     /p:RunAnalyzersDuringBuild=false 
@@ -23,7 +23,7 @@ tasks:
   default:
     desc: 'Builds the managed libraries in this module for development'
     cmds:
-      - cmd: dotnet build -c debug {{ .MS_ARGS }}
+      - cmd: dotnet build -c debug {{ .MS_ARGS }} {{ .CLI_ARGS }}
 
 #called by build pipeline to sync repo
   update:
@@ -76,12 +76,20 @@ tasks:
     vars:
       NATIVE_BUILD_PATH: 'build/{{ OS }}/{{ if eq OS "windows"}}Debug/{{end}}'
       LIB_PREFIX: '{{ if eq OS "windows"}}vnlib{{else}}libvn{{end}}'
-      CONFIG_DIR: '{{ .USER_WORKING_DIR }}/tests/plugin-tests/Config'
+      CONFIG_DIR: '{{ .USER_WORKING_DIR }}/tests/config'
       ARGON2_LIB_PATH: '{{ .USER_WORKING_DIR }}/../core/lib/Utils.Cryptography/argon2/{{ .NATIVE_BUILD_PATH }}argon2'
     cmds:
+     - cmd: dotnet build 
+        {{ .MS_ARGS }}
+        --configuration debug 
+        --nologo 
+        --verbosity minimal
+
      - cmd: dotnet test
         {{ .CLI_ARGS }}
         --logger "console;verbosity=detailed"
+        --no-build
+        --nologo
         --configuration debug
         --verbosity normal
         --framework {{ .TARGET_FRAMEWORK | default "net8.0" }}
