--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -80,7 +80,7 @@ jobs:
         dotnet-gitversion.exe VNLib.Data.Caching /updateprojectfiles
         dotnet-gitversion.exe Emails.Transactional /updateprojectfiles
         dotnet-gitversion.exe VNLib.Plugins.Extensions /updateprojectfiles
-        vnbuild build -S --include @project_name@ --verbose
+        vnbuild build --no-delay --include @project_name@ --verbose
     useTTY: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !CommandStep
@@ -124,7 +124,7 @@ jobs:
         dotnet-gitversion.exe VNLib.Data.Caching /updateprojectfiles
         dotnet-gitversion.exe Emails.Transactional /updateprojectfiles
         dotnet-gitversion.exe VNLib.Plugins.Extensions /updateprojectfiles
-        vnbuild build -S --include @project_name@
+        vnbuild build --no-delay --include @project_name@
     useTTY: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !CommandStep
