Squashed commit of the following:
commit e180601d8e86615eb37b59da5559006986fb0f53
Author: vnugent <public@vaughnnugent.com>
Date:   Wed Apr 2 16:00:01 2025 -0400

    update npm dependencies

commit 102df510cf26afb33c43ef1ba3c4d73d8025723d
Author: vnugent <public@vaughnnugent.com>
Date:   Wed Apr 2 15:54:49 2025 -0400

    slightly more platform build support, explicit build executors

commit 8532ade1e836c46b5524324aa08256a7e367e19c
Author: vnugent <public@vaughnnugent.com>
Date:   Wed Mar 26 13:11:25 2025 -0400

    frontend package updates

commit fdc6ea0d5b8fe362223246f6d641810691d76e21
Author: vnugent <public@vaughnnugent.com>
Date:   Wed Mar 26 13:10:03 2025 -0400

    extension package updates

commit d531a9e4d7ad472d94399e58da6f4dc8be1ab9fe
Merge: 8086cfb 26aae42
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Mar 7 11:55:18 2025 -0500

    Merge branch 'master' into develop

--- a/Module.Taskfile.yaml
+++ b/Module.Taskfile.yaml
@@ -48,7 +48,7 @@ tasks:
        silent: true
 
     #re-write semver after hard reset
-     - cmd: dotnet-gitversion.exe /updateprojectfiles
+     - cmd: dotnet gitversion /updateprojectfiles
 
      #build debug mode first
      - cmd: dotnet publish -c debug {{ .MS_ARGS }}
@@ -103,3 +103,10 @@ tasks:
     #clean solution
      - cmd: dotnet clean /p:BuildInParallel=true /p:MultiProcessorCompilation=true
      - cmd: powershell rm '{{ .ARCHIVE_FILE_NAME }}' --Force
+
+
+  npm-update:
+    desc: "Updates npm dependencies for all npm projects in the module"
+    cmds:
+     - cmd: cd lib/vnlib.browser && npm update
+     - cmd: cd tests/api-tests && npm update
