--- a/apps/vauth/Taskfile.yaml
+++ b/apps/vauth/Taskfile.yaml
@@ -3,55 +3,111 @@
 version: '3'
 
 vars:
-  INT_DIR: '{{.SCRATCH_DIR}}/obj/{{.MODULE_NAME}}/'
-  TARGET: '{{.USER_WORKING_DIR}}/bin'  
-  RELEASE_DIR: "./bin/release/{{.TARGET_FRAMEWORK}}"
+  BINARY_DIR: '{{ .BINARY_DIR | default "bin" }}'
+  TARGET_FRAMEWORK: '{{ .TARGET_FRAMEWORK | default "net8.0" }}'
+  MS_ARGS: 
+    /p:RunAnalyzersDuringBuild=false
+    /p:BuildInParallel=true 
+    /p:MultiProcessorCompilation=true 
+    /p:ErrorOnDuplicatePublishOutputFiles=false
+
+  TARGET_ARCHES: [ "linux-x64", "win-x64", "osx-x64", "win-arm64", "linux-arm", "linux-arm64", "osx-arm64" ]
 
 tasks:
-  
+
+  default:
+    desc: 'Builds the VNLib.WebServer project with defaults'
+    vars:
+      CONFIGURATION: '{{ .CONFIGURATION | default "release" }}'
+    cmds:
+     - cmd: cd src/ && dotnet build -c {{ .CONFIGURATION }} {{ .MS_ARGS }} {{ .CLI_ARGS }}
+
+  build-debug:
+    desc: 'Builds the VNLib.WebServer project in debug mode'
+    cmds:
+     - task: default
+       vars: { CONFIGURATION: 'debug' }
+
+  #called by build pipeline to build module
+  build:
+    dir: '{{ .USER_WORKING_DIR }}'
+    vars:
+      INT_DIR: '{{ .SCRATCH_DIR | default "." }}/obj/{{ .MODULE_NAME }}/'
+      MS_ARGS: '
+        {{ .BUILD_FLAGS }}
+        --nologo
+        --sc false
+        {{ .MS_ARGS }} 
+        /p:UseCommonOutputDirectory=true 
+        /p:IntermediateOutputPath="{{ .INT_DIR }}"'
+    cmds:
+    
+    #build release mode after all debug builds
+    - for: { var: TARGET_ARCHES }
+      cmd: dotnet publish -c release -r {{ .ITEM }} {{ .MS_ARGS }}
+
   #when build succeeds, archive the output into a tgz 
   postbuild_success:
-    dir: '{{.USER_WORKING_DIR}}'
-
+    dir: '{{ .USER_WORKING_DIR }}'
+    vars:
+      RELEASE_DIR: "{{ .BINARY_DIR }}/release/{{ .TARGET_FRAMEWORK }}"
     cmds:
-     - for: ['linux-x64', 'win-x64', 'osx-x64', 'linux-arm', 'linux-arm64']
-       task: postbuild
-       vars: { BUILD_MODE: debug, TARGET_OS: '{{.ITEM}}'}
+     - cmd: powershell mkdir {{ .BINARY_DIR }} -Force
 
      #remove uncessary files from the release dir
-     - powershell -Command "Get-ChildItem -Recurse '{{.RELEASE_DIR}}/' -Include *.pdb,*.xml | Remove-Item"
+     - cmd: powershell -Command "Get-ChildItem -Recurse '{{ .RELEASE_DIR }}/' -Include *.pdb,*.xml | Remove-Item"
 
-     - for: ['linux-x64', 'win-x64', 'osx-x64', 'linux-arm', 'linux-arm64']
+     - task: pack_parallel
+
+  pack_parallel:
+    internal: true
+    deps:
+     - task: pack_source
+  
+     - for: { var: TARGET_ARCHES }
        task: postbuild
-       vars: { BUILD_MODE: release, TARGET_OS: '{{.ITEM}}'}
+       vars: { BUILD_MODE: 'debug', TARGET_OS: '{{ .ITEM }}' }
 
-     #pack up source code and put in output
-     - powershell -Command "Get-ChildItem -Include *.cs,*.csproj -Recurse | Where { \$_.FullName -notlike '*\obj\*' } | Resolve-Path -Relative | tar --files-from - -czf '{{.TARGET}}/src.tgz'"
-
-
-  postbuild_failed:
-    dir: '{{.USER_WORKING_DIR}}'
-    cmds:
-     - echo "postbuild failed {{.PROJECT_NAME}}"
-
+     - for: { var: TARGET_ARCHES }
+       task: postbuild
+       vars: { BUILD_MODE: 'release', TARGET_OS: '{{ .ITEM }}' }
 
   postbuild:
-    dir: '{{.USER_WORKING_DIR}}'
-    vars:
-      BUILD_DIR: "{{.USER_WORKING_DIR}}/bin/{{.BUILD_MODE}}/{{.TARGET_FRAMEWORK}}/{{.TARGET_OS}}/publish"
     internal: true
+    dir: '{{ .USER_WORKING_DIR }}'
+    vars:
+      BUILD_DIR: "{{ .BINARY_DIR }}/{{ .BUILD_MODE }}/{{ .TARGET_FRAMEWORK }}/{{ .TARGET_OS }}/publish"
     cmds:     
-     #copy license and readme to target
-     - cd .. && powershell -Command "Copy-Item -Path ./build.readme.txt -Destination '{{.BUILD_DIR}}/readme.txt'"
-
+     #copy and readme to target
+     - powershell cp ../build.readme.txt '{{ .BUILD_DIR }}/readme.txt'
+     
      #tar outputs
-     - cd "{{.BUILD_DIR}}" && tar -czf "{{.TARGET}}/{{.TARGET_OS}}-{{.BUILD_MODE}}.tgz" .
+     - cd "{{ .BUILD_DIR }}" && tar -czf "{{ .USER_WORKING_DIR }}/{{ .BINARY_DIR }}/{{ .TARGET_OS }}-{{ .BUILD_MODE }}.tgz" .
 
+  pack_source:
+    internal: true
+    dir: '{{ .USER_WORKING_DIR }}'
+    vars:
+      EXCLUDES:
+        --exclude='src/bin/*'
+        --exclude='src/obj/*'
+      INCLUDES:
+        src/*
+        LICENSE
+        Taskfile.yaml
+        README.md
 
-#Remove the output dirs on clean
+    cmds:
+      #pack up source code and put in output
+     - cmd: cd .. && tar {{ .EXCLUDES }} -czf '{{ .USER_WORKING_DIR }}/{{ .BINARY_DIR }}/src.tgz' {{ .INCLUDES }}
+
+    #Remove the output dirs on clean
   clean:
-    dir: '{{.USER_WORKING_DIR}}'
+    dir: '{{ .USER_WORKING_DIR }}'
     ignore_error: true
     cmds:
-     - cmd: powershell Remove-Item -Recurse './bin'
-     - cmd: powershell Remove-Item -Recurse './obj'
+     - cmd: dotnet clean /p:BuildInParallel=true /p:MultiProcessorCompilation=true
+
+     - for: [ bin/, obj/ ]
+       cmd: powershell Remove-Item -Recurse -Force '{{ .USER_WORKING_DIR }}/{{ .ITEM }}'
+
