--- a/lib/vnlib.browser/package.json
+++ b/lib/vnlib.browser/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@simplewebauthn/types": "^10.0.0",
     "@types/lodash-es": "^4.14.x",
-    "@types/node": "^22.x"
+    "@types/node": "^22.x",
+    "typescript": "^5.8.3"
   }
 }
