--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,11 +1,11 @@
 assembly-versioning-scheme: MajorMinorPatch
 assembly-versioning-format: '{Major}.{Minor}.{Patch}.{WeightedPreReleaseNumber}'
 assembly-file-versioning-format: '{Major}.{Minor}.{Patch}.{WeightedPreReleaseNumber}'
-mode: ContinuousDeployment
+mode: ContinuousDelivery
 
 branches:
   main:    
-    tag: 'rc'
+    label: 'rc'
 ignore:
   sha: []
 merge-message-formats: {}
