--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -9,6 +9,13 @@ jobs:
     passwordSecret: github-access-token
     force: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !PushRepository
+    name: Codeberg push sync
+    remoteUrl: https://codeberg.org/VnUgE/Plugins.Essentials.git
+    userName: VnUgE
+    passwordSecret: codeberg-access-token
+    force: true
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
   - !TagCreateTrigger
     projects: Plugins.Essentials
@@ -115,6 +122,15 @@ jobs:
         git clone @server_url@/VNLib.Core core --branch master
         git clone @server_url@/VNLib.Data.Caching --branch master
         git clone @server_url@/VNLib.Plugins.Extensions --branch master
+    useTTY: true
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: Create git tag
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
+        cd @project_name@
+        task -t Module.Taskfile.yaml tag-current-commit
     useTTY: true
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   - !CommandStep
