--- a/Module.Taskfile.yaml
+++ b/Module.Taskfile.yaml
@@ -25,12 +25,27 @@ tasks:
     cmds:
       - cmd: dotnet build -c debug {{ .MS_ARGS }} {{ .CLI_ARGS }}
 
-#called by build pipeline to sync repo
+  #called by build pipeline to sync repo
   update:
     cmds:
      - cmd: git reset --hard  #clean up any local changes
      - cmd: git remote update
      - cmd: git pull origin {{ .BRANCH_NAME }} --verify-signatures 
+  
+  tag-current-commit:
+    desc: 'Tags the current commit with the current build version from gitversion'  
+    vars:
+    #get the current build version from gitversion
+      BUILD_VERSION:
+        sh: dotnet gitversion /showvariable FullSemver
+    #ensure the current branch is master
+    status:
+      #see if tag already exists otherwise error on windows
+      - git tag --list v{{ .BUILD_VERSION }} | findstr . >nul
+    cmds:
+     - cmd: echo "Tagging current commit with version v{{ .BUILD_VERSION }}"
+     - cmd: git tag -s -a v{{ .BUILD_VERSION }} -m "CI Build version {{ .BUILD_VERSION }}"
+     - cmd: git push origin v{{ .BUILD_VERSION }}
 
 #called by build pipeline to build module
   build:
@@ -110,3 +125,4 @@ tasks:
     cmds:
      - cmd: cd lib/vnlib.browser && npm update
      - cmd: cd tests/api-tests && npm update
+  
