chore(deps)!: migrate away from vue and vueuse
Move vueuse to a peer dependenxy for use with vueuse components, migrate vue dependency to the vue/reative dependncy to reduce package size and explicit vue requirement.

--- a/lib/vnlib.browser/package.json
+++ b/lib/vnlib.browser/package.json
@@ -17,12 +17,14 @@
   "license": "MIT",
   "dependencies": {
     "@simplewebauthn/browser": "^10.x.x",
-    "@vueuse/core": "^13.x",
+    "@vue/reactivity": "^3.x",
     "axios": "^1.x",
     "jose": "^6.0.8",
     "lodash-es": "^4.x",
-    "universal-cookie": "^8.0.x",
-    "vue": "^3.x"
+    "universal-cookie": "^8.0.x"
+  },
+  "peerDependencies": {
+    "@vueuse/core": "^13.x"
   },
   "devDependencies": {
     "@simplewebauthn/types": "^10.0.0",
