chore(changelog): add git-cliff and update changelog for v0.1.2-rc.3

--- a/Module.Taskfile.yaml
+++ b/Module.Taskfile.yaml
@@ -126,3 +126,11 @@ tasks:
      - cmd: cd lib/vnlib.browser && npm update
      - cmd: cd tests/api-tests && npm update
   
+  write-changelog:
+    cmds:
+     - cmd: git-cliff
+         --verbose
+         --config ci/cliff.toml
+         --output 'CHANGELOG.md'
+         --tag v{{ .VERSION }}
+         {{ .CLI_ARGS }}
